// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header About renders About submenu 1`] = `
<div>
  <div
    class="usa-overlay desktop:display-none"
  />
  <section
    aria-label="Official website of the United States government"
    class="usa-banner"
    data-testid="govBanner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header"
      >
        <div
          class="usa-banner__inner"
          data-testid="banner-header-inner-div"
        >
          <div
            class="grid-col-auto"
            data-testid="banner-header-flag-div"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__header-flag"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsBAMAAAAncaPMAAAAAXNSR0IArs4c6QAAABtQTFRF////4EAg2z8g2z8f2z4f2j4fHjSyHjOxHTOxQEYPwgAAAIdJREFUeNrNkUENxDAMBEOhFJaCKZiCKZhCKBj2ebV3rdR71+pIq+Qxj1GyqjJ3U8VlHkc07hFm0awBYe91juq6MSI0yhSAEgkzJ4TMKiXyzFw3pgR9lmIBJlqj2AmBedf+IycExmlKZVzvZEJ4A0oBrjBl/m6PCy95B3fFAN6YuQPxhbcB4QMkEj04wQXD5wAAAABJRU5ErkJggg=="
            />
          </div>
          <div
            aria-hidden="true"
            class="grid-col-fill tablet:grid-col-auto"
            data-testid="banner-header-grid-div"
          >
            <p
              class="usa-banner__header-text"
            >
              An official website of the United States government
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Here’s how you know
            </p>
          </div>
          <button
            aria-controls="gov-banner"
            aria-expanded="false"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Here’s how you know
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        hidden=""
        id="gov-banner"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-dot-gov%3c/title%3e%3cpath%20fill='%232378C3'%20fill-rule='evenodd'%20d='m32%200c17.7%200%2032%2014.3%2032%2032s-14.3%2032-32%2032-32-14.3-32-32%2014.3-32%2032-32zm0%201.2c-17%200-30.8%2013.8-30.8%2030.8s13.8%2030.8%2030.8%2030.8%2030.8-13.8%2030.8-30.8-13.8-30.8-30.8-30.8zm11.4%2038.9c.5%200%20.9.4.9.8v1.6h-24.6v-1.6c0-.5.4-.8.9-.8zm-17.1-12.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h.8c.5%200%20.9.4.9.8v.8h-21.4v-.8c0-.5.4-.8.9-.8h.8v-9.8zm5.7-8.2%2012.3%204.9v1.6h-1.6c0%20.5-.4.8-.9.8h-19.6c-.5%200-.9-.4-.9-.8h-1.6v-1.6s12.3-4.9%2012.3-4.9z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Official websites use .gov
                </strong>
                <br />
                A 
                <strong>
                  .gov
                </strong>
                 website belongs to an official government organization in the United States.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-https%3c/title%3e%3cpath%20fill='%23719F2A'%20fill-rule='evenodd'%20d='M32%200c17.673%200%2032%2014.327%2032%2032%200%2017.673-14.327%2032-32%2032C14.327%2064%200%2049.673%200%2032%200%2014.327%2014.327%200%2032%200zm0%201.208C14.994%201.208%201.208%2014.994%201.208%2032S14.994%2062.792%2032%2062.792%2062.792%2049.006%2062.792%2032%2049.006%201.208%2032%201.208zm0%2018.886a7.245%207.245%200%200%201%207.245%207.245v3.103h.52c.86%200%201.557.698%201.557%201.558v9.322c0%20.86-.697%201.558-1.557%201.558h-15.53c-.86%200-1.557-.697-1.557-1.558V32c0-.86.697-1.558%201.557-1.558h.52V27.34A7.245%207.245%200%200%201%2032%2020.094zm0%203.103a4.142%204.142%200%200%200-4.142%204.142v3.103h8.284V27.34A4.142%204.142%200%200%200%2032%2023.197z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Secure .gov websites use HTTPS
                </strong>
                <br />
                A
                 
                <strong>
                  lock (
                  <svg
                    aria-label="Locked padlock icon"
                    class="usa-icon"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                    />
                  </svg>
                  )
                </strong>
                 
                or 
                <strong>
                  https://
                </strong>
                 means you’ve safely connected to the
                 
                .gov
                 website. Share sensitive information only on official, secure websites.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <header
    class="usa-header usa-header--basic desktop:position-sticky top-0 desktop:z-500 bg-white border-bottom-2px border-primary-vivid"
    data-testid="header"
  >
    <div
      class="usa-nav-container display-flex flex-justify"
    >
      <div
        class="usa-navbar border-bottom-0"
      >
        <div
          class="usa-logo margin-y-2"
        >
          <em
            class="usa-logo__text"
          >
            <div
              class="display-flex flex-align-center"
            >
              <a
                class="position-relative"
                href="/"
              >
                <img
                  alt="Simpler.Grants.gov"
                  class="height-4 display-block position-relative desktop:height-auto"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </a>
            </div>
          </em>
        </div>
      </div>
      <div
        class="usa-navbar order-last desktop:display-none"
      >
        <button
          class="usa-menu-btn"
          data-testid="navMenuButton"
          type="button"
        >
          Menu
        </button>
      </div>
      <div
        class="usa-nav__primary margin-top-0 padding-bottom-0 desktop:padding-bottom-05 text-no-wrap desktop:order-last margin-left-auto desktop:height-auto height-6"
      >
        <div
          class="usa-nav__primary-item border-top-0 mobile-nav-dropdown-uncollapsed-override position-relative"
        >
          <button
            aria-controls="user-control"
            aria-expanded="false"
            class="usa-accordion__button usa-nav__link padding-y-0 padding-x-2 margin-right-2 height-6"
            data-testid="navDropDownButton"
            type="button"
          >
            <span>
              <a
                class="flex-align-center display-flex padding-x-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1 display-none desktop:display-block"
                >
                  Account
                </div>
              </a>
            </span>
          </button>
          <ul
            class="usa-nav__submenu position-absolute desktop:width-full z-200 right-0"
            hidden=""
            id="user-control"
          >
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="flex-align-center display-flex desktop:display-none usa-nav__submenu-item usa-button border-y-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1"
                >
                  Account
                </div>
              </a>
            </li>
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="display-flex usa-button usa-button--unstyled text-no-underline"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                >
                  <use
                    href="/img.jpg#logout"
                  />
                </svg>
                Sign out
              </a>
            </li>
          </ul>
        </div>
      </div>
      <nav
        class="usa-nav"
      >
        <button
          aria-label="Close Navigation Menu"
          class="usa-nav__close"
          data-testid="navCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="usa-icon usa-icon--size-3"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <ul
          class="usa-nav__primary usa-accordion"
        >
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/"
            >
              <div>
                Home
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/search"
            >
              <div>
                Search
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="About"
              aria-expanded="true"
              class="usa-accordion__button usa-nav__link usa-current simpler-subnav-open"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-2"
              name="navDropDownButton"
              type="button"
            >
              <span>
                About
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              id="About"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/vision"
                >
                  <div>
                    Our vision
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/roadmap"
                >
                  <div>
                    Product roadmap
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Community"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-3"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Community
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="Community"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/newsletter"
                >
                  <div>
                    Newsletter
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/events"
                >
                  <div>
                    Events
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://wiki.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Public wiki
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://forum.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Discussion forum
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Workspace"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-4"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Workspace
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="Workspace"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/applications"
                >
                  <div>
                    Applications
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-opportunities"
                >
                  <div>
                    Saved opportunities
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-search-queries"
                >
                  <div>
                    Saved search queries
                  </div>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Header About renders Community submenu 1`] = `
<div>
  <div
    class="usa-overlay desktop:display-none"
  />
  <section
    aria-label="Official website of the United States government"
    class="usa-banner"
    data-testid="govBanner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header"
      >
        <div
          class="usa-banner__inner"
          data-testid="banner-header-inner-div"
        >
          <div
            class="grid-col-auto"
            data-testid="banner-header-flag-div"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__header-flag"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsBAMAAAAncaPMAAAAAXNSR0IArs4c6QAAABtQTFRF////4EAg2z8g2z8f2z4f2j4fHjSyHjOxHTOxQEYPwgAAAIdJREFUeNrNkUENxDAMBEOhFJaCKZiCKZhCKBj2ebV3rdR71+pIq+Qxj1GyqjJ3U8VlHkc07hFm0awBYe91juq6MSI0yhSAEgkzJ4TMKiXyzFw3pgR9lmIBJlqj2AmBedf+IycExmlKZVzvZEJ4A0oBrjBl/m6PCy95B3fFAN6YuQPxhbcB4QMkEj04wQXD5wAAAABJRU5ErkJggg=="
            />
          </div>
          <div
            aria-hidden="true"
            class="grid-col-fill tablet:grid-col-auto"
            data-testid="banner-header-grid-div"
          >
            <p
              class="usa-banner__header-text"
            >
              An official website of the United States government
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Here’s how you know
            </p>
          </div>
          <button
            aria-controls="gov-banner"
            aria-expanded="false"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Here’s how you know
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        hidden=""
        id="gov-banner"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-dot-gov%3c/title%3e%3cpath%20fill='%232378C3'%20fill-rule='evenodd'%20d='m32%200c17.7%200%2032%2014.3%2032%2032s-14.3%2032-32%2032-32-14.3-32-32%2014.3-32%2032-32zm0%201.2c-17%200-30.8%2013.8-30.8%2030.8s13.8%2030.8%2030.8%2030.8%2030.8-13.8%2030.8-30.8-13.8-30.8-30.8-30.8zm11.4%2038.9c.5%200%20.9.4.9.8v1.6h-24.6v-1.6c0-.5.4-.8.9-.8zm-17.1-12.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h.8c.5%200%20.9.4.9.8v.8h-21.4v-.8c0-.5.4-.8.9-.8h.8v-9.8zm5.7-8.2%2012.3%204.9v1.6h-1.6c0%20.5-.4.8-.9.8h-19.6c-.5%200-.9-.4-.9-.8h-1.6v-1.6s12.3-4.9%2012.3-4.9z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Official websites use .gov
                </strong>
                <br />
                A 
                <strong>
                  .gov
                </strong>
                 website belongs to an official government organization in the United States.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-https%3c/title%3e%3cpath%20fill='%23719F2A'%20fill-rule='evenodd'%20d='M32%200c17.673%200%2032%2014.327%2032%2032%200%2017.673-14.327%2032-32%2032C14.327%2064%200%2049.673%200%2032%200%2014.327%2014.327%200%2032%200zm0%201.208C14.994%201.208%201.208%2014.994%201.208%2032S14.994%2062.792%2032%2062.792%2062.792%2049.006%2062.792%2032%2049.006%201.208%2032%201.208zm0%2018.886a7.245%207.245%200%200%201%207.245%207.245v3.103h.52c.86%200%201.557.698%201.557%201.558v9.322c0%20.86-.697%201.558-1.557%201.558h-15.53c-.86%200-1.557-.697-1.557-1.558V32c0-.86.697-1.558%201.557-1.558h.52V27.34A7.245%207.245%200%200%201%2032%2020.094zm0%203.103a4.142%204.142%200%200%200-4.142%204.142v3.103h8.284V27.34A4.142%204.142%200%200%200%2032%2023.197z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Secure .gov websites use HTTPS
                </strong>
                <br />
                A
                 
                <strong>
                  lock (
                  <svg
                    aria-label="Locked padlock icon"
                    class="usa-icon"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                    />
                  </svg>
                  )
                </strong>
                 
                or 
                <strong>
                  https://
                </strong>
                 means you’ve safely connected to the
                 
                .gov
                 website. Share sensitive information only on official, secure websites.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <header
    class="usa-header usa-header--basic desktop:position-sticky top-0 desktop:z-500 bg-white border-bottom-2px border-primary-vivid"
    data-testid="header"
  >
    <div
      class="usa-nav-container display-flex flex-justify"
    >
      <div
        class="usa-navbar border-bottom-0"
      >
        <div
          class="usa-logo margin-y-2"
        >
          <em
            class="usa-logo__text"
          >
            <div
              class="display-flex flex-align-center"
            >
              <a
                class="position-relative"
                href="/"
              >
                <img
                  alt="Simpler.Grants.gov"
                  class="height-4 display-block position-relative desktop:height-auto"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </a>
            </div>
          </em>
        </div>
      </div>
      <div
        class="usa-navbar order-last desktop:display-none"
      >
        <button
          class="usa-menu-btn"
          data-testid="navMenuButton"
          type="button"
        >
          Menu
        </button>
      </div>
      <div
        class="usa-nav__primary margin-top-0 padding-bottom-0 desktop:padding-bottom-05 text-no-wrap desktop:order-last margin-left-auto desktop:height-auto height-6"
      >
        <div
          class="usa-nav__primary-item border-top-0 mobile-nav-dropdown-uncollapsed-override position-relative"
        >
          <button
            aria-controls="user-control"
            aria-expanded="false"
            class="usa-accordion__button usa-nav__link padding-y-0 padding-x-2 margin-right-2 height-6"
            data-testid="navDropDownButton"
            type="button"
          >
            <span>
              <a
                class="flex-align-center display-flex padding-x-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1 display-none desktop:display-block"
                >
                  Account
                </div>
              </a>
            </span>
          </button>
          <ul
            class="usa-nav__submenu position-absolute desktop:width-full z-200 right-0"
            hidden=""
            id="user-control"
          >
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="flex-align-center display-flex desktop:display-none usa-nav__submenu-item usa-button border-y-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1"
                >
                  Account
                </div>
              </a>
            </li>
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="display-flex usa-button usa-button--unstyled text-no-underline"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                >
                  <use
                    href="/img.jpg#logout"
                  />
                </svg>
                Sign out
              </a>
            </li>
          </ul>
        </div>
      </div>
      <nav
        class="usa-nav"
      >
        <button
          aria-label="Close Navigation Menu"
          class="usa-nav__close"
          data-testid="navCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="usa-icon usa-icon--size-3"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <ul
          class="usa-nav__primary usa-accordion"
        >
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/"
            >
              <div>
                Home
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/search"
            >
              <div>
                Search
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="About"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link usa-current"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-2"
              name="navDropDownButton"
              type="button"
            >
              <span>
                About
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="About"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/vision"
                >
                  <div>
                    Our vision
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/roadmap"
                >
                  <div>
                    Product roadmap
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Community"
              aria-expanded="true"
              class="usa-accordion__button usa-nav__link simpler-subnav-open"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-3"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Community
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              id="Community"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/newsletter"
                >
                  <div>
                    Newsletter
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/events"
                >
                  <div>
                    Events
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://wiki.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Public wiki
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://forum.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Discussion forum
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Workspace"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-4"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Workspace
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="Workspace"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/applications"
                >
                  <div>
                    Applications
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-opportunities"
                >
                  <div>
                    Saved opportunities
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-search-queries"
                >
                  <div>
                    Saved search queries
                  </div>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Header renders Header navbar menu 1`] = `
<div>
  <div
    class="usa-overlay desktop:display-none"
  />
  <section
    aria-label="Official website of the United States government"
    class="usa-banner"
    data-testid="govBanner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header"
      >
        <div
          class="usa-banner__inner"
          data-testid="banner-header-inner-div"
        >
          <div
            class="grid-col-auto"
            data-testid="banner-header-flag-div"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__header-flag"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsBAMAAAAncaPMAAAAAXNSR0IArs4c6QAAABtQTFRF////4EAg2z8g2z8f2z4f2j4fHjSyHjOxHTOxQEYPwgAAAIdJREFUeNrNkUENxDAMBEOhFJaCKZiCKZhCKBj2ebV3rdR71+pIq+Qxj1GyqjJ3U8VlHkc07hFm0awBYe91juq6MSI0yhSAEgkzJ4TMKiXyzFw3pgR9lmIBJlqj2AmBedf+IycExmlKZVzvZEJ4A0oBrjBl/m6PCy95B3fFAN6YuQPxhbcB4QMkEj04wQXD5wAAAABJRU5ErkJggg=="
            />
          </div>
          <div
            aria-hidden="true"
            class="grid-col-fill tablet:grid-col-auto"
            data-testid="banner-header-grid-div"
          >
            <p
              class="usa-banner__header-text"
            >
              An official website of the United States government
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Here’s how you know
            </p>
          </div>
          <button
            aria-controls="gov-banner"
            aria-expanded="false"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Here’s how you know
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        hidden=""
        id="gov-banner"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-dot-gov%3c/title%3e%3cpath%20fill='%232378C3'%20fill-rule='evenodd'%20d='m32%200c17.7%200%2032%2014.3%2032%2032s-14.3%2032-32%2032-32-14.3-32-32%2014.3-32%2032-32zm0%201.2c-17%200-30.8%2013.8-30.8%2030.8s13.8%2030.8%2030.8%2030.8%2030.8-13.8%2030.8-30.8-13.8-30.8-30.8-30.8zm11.4%2038.9c.5%200%20.9.4.9.8v1.6h-24.6v-1.6c0-.5.4-.8.9-.8zm-17.1-12.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h1.6v-9.8h3.3v9.8h.8c.5%200%20.9.4.9.8v.8h-21.4v-.8c0-.5.4-.8.9-.8h.8v-9.8zm5.7-8.2%2012.3%204.9v1.6h-1.6c0%20.5-.4.8-.9.8h-19.6c-.5%200-.9-.4-.9-.8h-1.6v-1.6s12.3-4.9%2012.3-4.9z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Official websites use .gov
                </strong>
                <br />
                A 
                <strong>
                  .gov
                </strong>
                 website belongs to an official government organization in the United States.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%3e%3ctitle%3eicon-https%3c/title%3e%3cpath%20fill='%23719F2A'%20fill-rule='evenodd'%20d='M32%200c17.673%200%2032%2014.327%2032%2032%200%2017.673-14.327%2032-32%2032C14.327%2064%200%2049.673%200%2032%200%2014.327%2014.327%200%2032%200zm0%201.208C14.994%201.208%201.208%2014.994%201.208%2032S14.994%2062.792%2032%2062.792%2062.792%2049.006%2062.792%2032%2049.006%201.208%2032%201.208zm0%2018.886a7.245%207.245%200%200%201%207.245%207.245v3.103h.52c.86%200%201.557.698%201.557%201.558v9.322c0%20.86-.697%201.558-1.557%201.558h-15.53c-.86%200-1.557-.697-1.557-1.558V32c0-.86.697-1.558%201.557-1.558h.52V27.34A7.245%207.245%200%200%201%2032%2020.094zm0%203.103a4.142%204.142%200%200%200-4.142%204.142v3.103h8.284V27.34A4.142%204.142%200%200%200%2032%2023.197z'/%3e%3c/svg%3e"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Secure .gov websites use HTTPS
                </strong>
                <br />
                A
                 
                <strong>
                  lock (
                  <svg
                    aria-label="Locked padlock icon"
                    class="usa-icon"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                    />
                  </svg>
                  )
                </strong>
                 
                or 
                <strong>
                  https://
                </strong>
                 means you’ve safely connected to the
                 
                .gov
                 website. Share sensitive information only on official, secure websites.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <header
    class="usa-header usa-header--basic desktop:position-sticky top-0 desktop:z-500 bg-white border-bottom-2px border-primary-vivid"
    data-testid="header"
  >
    <div
      class="usa-nav-container display-flex flex-justify"
    >
      <div
        class="usa-navbar border-bottom-0"
      >
        <div
          class="usa-logo margin-y-2"
        >
          <em
            class="usa-logo__text"
          >
            <div
              class="display-flex flex-align-center"
            >
              <a
                class="position-relative"
                href="/"
              >
                <img
                  alt="Simpler.Grants.gov"
                  class="height-4 display-block position-relative desktop:height-auto"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </a>
            </div>
          </em>
        </div>
      </div>
      <div
        class="usa-navbar order-last desktop:display-none"
      >
        <button
          class="usa-menu-btn"
          data-testid="navMenuButton"
          type="button"
        >
          Menu
        </button>
      </div>
      <div
        class="usa-nav__primary margin-top-0 padding-bottom-0 desktop:padding-bottom-05 text-no-wrap desktop:order-last margin-left-auto desktop:height-auto height-6"
      >
        <div
          class="usa-nav__primary-item border-top-0 mobile-nav-dropdown-uncollapsed-override position-relative"
        >
          <button
            aria-controls="user-control"
            aria-expanded="false"
            class="usa-accordion__button usa-nav__link padding-y-0 padding-x-2 margin-right-2 height-6"
            data-testid="navDropDownButton"
            type="button"
          >
            <span>
              <a
                class="flex-align-center display-flex padding-x-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1 display-none desktop:display-block"
                >
                  Account
                </div>
              </a>
            </span>
          </button>
          <ul
            class="usa-nav__submenu position-absolute desktop:width-full z-200 right-0"
            hidden=""
            id="user-control"
          >
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="flex-align-center display-flex desktop:display-none usa-nav__submenu-item usa-button border-y-0"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                  style="color: rgb(181, 9, 9);"
                >
                  <use
                    href="/img.jpg#error"
                  />
                </svg>
                <div
                  class="padding-left-1"
                >
                  Account
                </div>
              </a>
            </li>
            <li
              class="usa-nav__submenu-item"
            >
              <a
                class="display-flex usa-button usa-button--unstyled text-no-underline"
              >
                <svg
                  aria-hidden="true"
                  class="usa-icon usa-icon--size-3 display-block"
                  role="img"
                >
                  <use
                    href="/img.jpg#logout"
                  />
                </svg>
                Sign out
              </a>
            </li>
          </ul>
        </div>
      </div>
      <nav
        class="usa-nav"
      >
        <button
          aria-label="Close Navigation Menu"
          class="usa-nav__close"
          data-testid="navCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="usa-icon usa-icon--size-3"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <ul
          class="usa-nav__primary usa-accordion"
        >
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/"
            >
              <div>
                Home
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <a
              class="usa-nav__link"
              href="/search"
            >
              <div>
                Search
              </div>
            </a>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="About"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-2"
              name="navDropDownButton"
              type="button"
            >
              <span>
                About
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="About"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/vision"
                >
                  <div>
                    Our vision
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/roadmap"
                >
                  <div>
                    Product roadmap
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Community"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-3"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Community
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="Community"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/newsletter"
                >
                  <div>
                    Newsletter
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/events"
                >
                  <div>
                    Events
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://wiki.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Public wiki
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="https://forum.simpler.grants.gov/"
                  target="_blank"
                >
                  <div
                    class="icon-btn"
                  >
                    Discussion forum
                    <svg
                      aria-hidden="true"
                      class="usa-icon usa-icon--size-2"
                      role="img"
                    >
                      <use
                        href="/img.jpg#launch"
                      />
                    </svg>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            class="usa-nav__primary-item"
          >
            <button
              aria-controls="Workspace"
              aria-expanded="false"
              class="usa-accordion__button usa-nav__link"
              data-testid="navDropDownButton"
              id="nav-dropdown-button-4"
              name="navDropDownButton"
              type="button"
            >
              <span>
                Workspace
              </span>
            </button>
            <ul
              class="usa-nav__submenu margin-top-05"
              hidden=""
              id="Workspace"
            >
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/applications"
                >
                  <div>
                    Applications
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-opportunities"
                >
                  <div>
                    Saved opportunities
                  </div>
                </a>
              </li>
              <li
                class="usa-nav__submenu-item"
              >
                <a
                  href="/saved-search-queries"
                >
                  <div>
                    Saved search queries
                  </div>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </header>
</div>
`;
